--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     </fieldset>
     <button class="usa-button" type="submit">Submit</button>
   </form>
-  <div class="slidecontainer">
+  <div class="slidecontainer center">
     <p>Number of images you want:</p>
     <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
   </div>
