--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,9 @@
     <button class="usa-button" type="submit">Submit</button>
   </form>
   <div class="slidecontainer center">
-    <p>Number of images you want:</p>
+    <!--TODO UTSAV AND ZACH: change rhis text color to the same blue as the title-->
+    <p>Reading level:</p>
+    <!--TODO UTSAV AND ZACH: add labels to this (left: beginner, middle: intermediate, right: advanced)-->
     <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
   </div>
 </body>
