print section instead of summary and change slider label

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,7 @@
     <button class="usa-button" type="submit">Submit</button>
   </form>
   <div class="slidecontainer center">
-    <!--TODO UTSAV AND ZACH: change rhis text color to the same blue as the title-->
-    <p>Reading level:</p>
+    <p>Reading level (beginner -> advanced):</p>
     <!--TODO UTSAV AND ZACH: add labels to this (left: beginner, middle: intermediate, right: advanced)-->
     <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
   </div>
